--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
             <div class="container">
                 <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Bacchus</a>
-                <p class="navbar-brand mb-auto d-lg-none fw-bold nav-link">(405) 844-5521</p>
+                <a class="navbar-brand mb-auto d-lg-none fw-bold nav-link" href="tel:4058445521">(405) 844-5521</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
