Embedded maps on store page

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/bacchus1.PNG" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">Fresh Coffee</span>
-                            <span class="section-heading-lower">Worth Drinking</span>
+                            <span class="section-heading-upper">Premium Selection</span>
+                            <span class="section-heading-lower">For Every Occasion</span>
                         </h2>
-                        <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!</p>
+                        <p class="mb-3">Whether you're gearing up for your next big party or winding down after a long day at work, we have the products you're looking for at an amazing price! Stop by today to check out our premium selection of beer, wine, and spirits!</p>
                         <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="store.html">Visit Us Today!</a></div>
                     </div>
                 </div>
