--- a/store.html
+++ b/store.html
@@ -26,8 +26,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
             <div class="container">
                 <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Bacchus</a>
-                <p class="navbar-brand mb-auto d-lg-none">(405) 844-5521</p>
-
+                <a class="navbar-brand mb-auto d-lg-none fw-bold nav-link" href="tel:4058445521">(405) 844-5521</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
@@ -78,6 +77,7 @@
                                     <span class="ms-auto">8:00 AM to 12:00 AM</span>
                                 </li>
                             </ul>
+                            <iframe class="mx-auto" style="box-sizing: content-box;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.213230568423!2d-97.56891968414436!3d35.64711778020234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b21da7eeeab10b%3A0xd3aec9dad1f7cb8c!2sBacchus!5e0!3m2!1sen!2sus!4v1626309408548!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                             <p class="address mb-5">
                                 <em>
                                     <strong>17216 N May Ave #9029</strong>
