Fixed map embed

--- a/store.html
+++ b/store.html
@@ -77,7 +77,9 @@
                                     <span class="ms-auto">8:00 AM to 12:00 AM</span>
                                 </li>
                             </ul>
-                            <iframe class="mx-auto" style="box-sizing: content-box;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.213230568423!2d-97.56891968414436!3d35.64711778020234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b21da7eeeab10b%3A0xd3aec9dad1f7cb8c!2sBacchus!5e0!3m2!1sen!2sus!4v1626309408548!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <div class="iframe-container">
+                            <iframe class="mx-auto container-fluid" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.213230568423!2d-97.56891968414436!3d35.64711778020234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b21da7eeeab10b%3A0xd3aec9dad1f7cb8c!2sBacchus!5e0!3m2!1sen!2sus!4v1626309408548!5m2!1sen!2sus" allowfullscreen="" loading="lazy"></iframe>
+                            </div>
                             <p class="address mb-5">
                                 <em>
                                     <strong>17216 N May Ave #9029</strong>
