--- a/about.html
+++ b/about.html
@@ -50,10 +50,7 @@
                                     <span class="section-heading-lower">About Our Shop</span>
                                 </h2>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae inventore rerum nesciunt alias quos culpa quidem illo sit voluptatem officia perferendis tempora numquam sint maiores, aperiam modi cum corporis autem!</p>
-                                <p class="mb-0">
-                                    We guarantee that you will fall in
-                                    <em>lust</em>
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non vero accusamus dolor minima impedit, quis saepe pariatur nisi repudiandae vitae at incidunt tempore hic aspernatur asperiores optio fugiat deleniti. Aspernatur!
+                                <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non vero accusamus dolor minima impedit, quis saepe pariatur nisi repudiandae vitae at incidunt tempore hic aspernatur asperiores optio fugiat deleniti. Aspernatur!
                                 </p>
                             </div>
                         </div>
@@ -62,7 +59,7 @@
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Bacchus 2021</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Cameron Crockett 2021</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
