--- a/store.html
+++ b/store.html
@@ -121,7 +121,7 @@
             </div>
         </section> -->
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Bacchus 2021</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Cameron Crockett 2021</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
